# shredder

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  patterns.rs  secure_erase.rs  standards.rs  storage.rs  trim.rs
tests/: integration_tests.rs
tests/common/: mod.rs
